# smart

./: .flake8  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  :q  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_dev  MANIFEST.in  README.md  _config.yml  _requirements.txt  _toc.yml  appveyor.yml  dfjkl  main.config  mkdocs.yml  nohup.out  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  singularity-recipe-dev.def  singularity-recipe.def  workspace_dolfin.code-workspace  workspace_ufl.code-workspace
.github/: CONTRIBUTING.md
.github/workflows/: build_docs.yml  deploy_docs.yml  docker-image.yml  draft-pdf.yml  pre-commit.yml  run_examples.yml  run_examples_mpi.yml  test_fenics_smart.yml  test_fenics_stubs.yml
_docs/: .conf.py.swp  Makefile  README.md  conf.py  getting_started.rst  index.rst  make.bat
data/: adjacent_cubes.blend  adjacent_cubes.xml  adjacent_cubes_from_dolfin.py  adjacent_cubes_refined.blend  adjacent_cubes_refined.xml  notes.txt  unit_cube_mesh_16.xml
debug/: debug_hdf5.py  debug_mixed_assembly.py  debug_petsc_snes.py  debug_petsc_snes_parallel_060422.py  debug_projection_error.py  debug_stubs.py  mwe_mixed_domain.py  parallel_debug.py  stubs_model.py  subp.py  tensors_test.py
debug/mixed_dim/: KNPEMI.py  KNPEMI_MMS.py  KNPEMI_run.py  debug_mixed_dim_example.py  exterior_mesh000000.vtu  full_mesh000000.vtu  gamma_mesh000000.vtu  interior_mesh000000.vtu  poisson_lm_3D.py
debug/scratch/: custom_newton.py  debug_hdf5.py  debug_stubs_old.py  form_differentiation.py  formsplitter.py  mpi_test.py
devtools/: README.md
devtools/conda-envs/: test_env.yaml
docker/: Dockerfile  Dockerfile_dev  Dockerfile_devenv  Dockerfile_minimal
docs/: .conf.py.swp  Makefile  api.rst  conf.py  faq.md  faq.rst  getting_started.md  implementation.md  index.md  index.rst  install.md  install.rst  math.md  math.rst  numerics.md  pystubs.rst  pystubs_test.rst  pystubs_verbose.rst  refs.bib  rtd-requirements.txt
docs/_pythonapi/: stubs.common.rst  stubs.config.rst  stubs.data_manipulation.rst  stubs.mesh.rst  stubs.model.rst  stubs.model_assembly.rst  stubs.model_building.rst  stubs.rst  stubs.solvers.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: Example1_SingleSpeciesLinearDegradation.py  check_mass_conservation.py  convert_notebooks_to_python.py  main.config  main.py  main_2d.config  main_2d.py  main_bsb.py  main_refactor.py  model.smodel  notes.txt  run.sh  test_different_step_size_err.py
examples/bsb/: bsb_simple.blend1  cell2013_3d.smodel  complex_bsb_mesh.blend  complex_bsb_mesh.blend1  complex_bsb_mesh.xml  complex_bsb_mesh_2.xml  notes.txt  two_cube_nonmanifold.blend1  two_square_nonmanifold.blend1
examples/cell2013_2d/: cell2013_2d.py
examples/cell2013_3d/: cell2013_3d.smodel  cube_10.xml  toy_model.py
examples/example1/: common.py:Zone.Identifier  example1.ipynb  example1.py  example1_driver.py  example1_model.py  example1_sphere.ipynb  example1_sphere.ipynb:Zone.Identifier  test_visualization.ipynb
examples/example2/: example2.ipynb  example2_2d.ipynb  example2_conservation_test.ipynb  example2_multimeshMPI.py  example2_withcurv.ipynb
examples/example2-3d/: example2-3d.ipynb  modelCur.pkl
examples/example2_binding_to_membrane/: example2_main.py  example2_model.py
examples/example3/: example3.ipynb  example3_multimeshMPI.py  example3_withaxisymm.ipynb  example3_withmanufactured.ipynb  output.txt
examples/example4/: example4.ipynb
examples/example5/: example5.ipynb  example5_odecoupling.ipynb  example5_testRestrict.ipynb  model_cur.pkl  sample_input.csv  test_data.h5  test_data.xdmf
examples/example6/: example6.ipynb  example6_withaxisymm.ipynb  model_cur.pkl
examples/example_1a/: example_1a.sbmodel  example_1a.smodel  example_1a_model.py  example_1a_run.py
examples/example_1b/: example_1b.smodel  example_1b_model.py  example_1b_run.py
examples/lindeg/: Example1_SingleSpeciesLinearDegradation.py  lin_deg.smodel
examples/misc/: PyGMSH_generator.py  quadrasected_ball.blend  quadrasected_ball.py
examples/toy_model/: compartments.json  species.json  toy_model.py  toy_model_zerod.py
examples/toy_model_2d/: compartments.json  square_50.xml  toy_model_2d.py  toy_model_2d.smodel
examples/toy_model_sweep/: compartments.json  parameter_sweep.json  parameters.json  reactions.json  toy_model_sweep.py
joss-paper/: README  joss_checklist.md  paper.bib  paper.jats  paper.md
models/toy_model/: toy_model.py  toy_model_parameters.json  toy_model_reactions.json  toy_model_species.json
smart/: __init__.py  common.py  config.py  deprecation.py  mesh.py  mesh_tools.py  model.py  model_assembly.py  solvers.py  test_nan.ipynb  units.py  utils.py  visualization.py
smart/cpp/: MixedAssemblerTemp.cpp
stubs/: __init__.py  _version.py  common.py  config.py  config_refactor.py  data_manipulation.py  deprecation.py  flux_assembly.py  mesh.py  model.py  model_assembly.py  model_building.py  model_refactor.py  post_process.py  solver_class.py  solvers.py  stubs.py  sweep.py  symbolic.py  test.py  units.py  utils.py
stubs/cpp/: MixedAssemblerTemp.cpp  MixedAssemblerTemp.h
stubs/misc/: fenicsSelectNeighbors.py
stubs/scratch/: plot.py  scratch.py  symbolic.py
stubs/tests/: test_fsbgen.py
tests/: README  conftest.py  pytest.sbmodel  run_tests.py  test_compartment.py  test_curv.py  test_dolfin_subdomains.py  test_mesh_subdomains.py  test_mesh_tools.py  test_parallel.py  test_parameter.py  test_sbmodel_io.py  test_species.py  test_stubs_model_init.py  test_stubs_model_setup.py
tests/dolfinx_tests/: notes.txt  test1_subdomain_exctraction.py  test2_poisson.py
tests/fenics_tests/: constrained_poisson.py  notes.txt  sv_ss_poisson.py
tests/mesh/: DemoCuboidsMesh_mf2000000.pvtu  DemoCuboidsMesh_mf3000000.pvtu
tests/mesh_tests/: test_mesh_subdomains.py
tools/: df_sweep.py
utils/: libsbml_ex.py  model_to_sbml.py  sbml_to_model.py  sbml_unit_conversion.py  sbml_unit_registry.py
utils/models/: sbml.xml  (+10 more)
(+65 files in other folders)
