[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "stubs"
version = "0.1.10"
description = "STUBS is a biophysical simulation library that provides a level of abstraction to models, making it easier for users to develop, share, and simulate their mathematical models"
authors = [{name = "Justin Laughlin", email = "justinglaughlin@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "matplotlib",
    "numpy>=1.16.0",
    "pandas",
    "Pint",
    "scipy>=1.1.0",
    "sympy",
    "dataclasses",
    "cached-property",
    "tabulate",
    "termcolor",
    "termplotlib",
    "meshio",
    "gmsh",
    "h5py",
]


[project.urls]
homepage = "https://rangamanilabucsd.github.io/stubs"
repository = "https://github.com/RangamaniLabUCSD/stubs"

[tool.setuptools]
packages = ["stubs"]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
   "jupyter-book",
]
all = [
   "stubs[test]",
   "stubs[docs]",
   "stubs[dev]"
]


[tool.pytest.ini_options]
addopts = [
   "--cov=stubs",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]

testpaths = [
    "tests"
]
